# logreader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.orig  README.md  README.md.orig
buildsystem/CMake/: compiler_support.cmake  configuration.cmake
executable/: CMakeLists.txt  main.cpp
production/: CMakeLists.txt
production/include/compressor/: chunk.hpp  compressor.hpp  compressor_impl.hpp  lizard_compressor.hpp  lz4_compressor.hpp  lz_compressor.hpp
production/include/datasource/: cache.hpp  constants.hpp  content.hpp  data_sink.hpp  data_source.h  data_source.hpp  data_view.hpp
production/include/gui/: action_handler.hpp  main_app_panel.hpp  main_window.hpp  menu_bar.hpp  status_bar.hpp  widget.hpp
production/libs/: CMakeLists.txt
production/libs/hyperscan/: CMakeLists.txt
production/libs/lizard/: CMakeLists.txt
production/libs/lz4/: CMakeLists.txt
production/libs/nana/: CMakeLists.txt
production/libs/re2/: CMakeLists.txt
production/libs/spdlog/: CMakeLists.txt
production/subsystems/: CMakeLists.txt
production/subsystems/compressor/: CMakeLists.txt
production/subsystems/compressor/src/: chunk.cpp  compressor.cpp  lizard_compressor.cpp  lz4_compressor.cpp
production/subsystems/datasource/: CMakeLists.txt
production/subsystems/datasource/src/: constants.cpp  data_sink.cpp  data_source.cpp  data_view.cpp  datasource.cpp
production/subsystems/executor/: CMakeLists.txt
production/subsystems/executor/src/: application.cpp  configurator.cpp  executor.cpp  options.cpp  os_proxy.cpp
production/subsystems/gui/: CMakeLists.txt
production/subsystems/gui/src/: data_source.cpp  main_app_panel.cpp  main_window.cpp  menu_bar.cpp  status_bar.cpp
tests/data/: CMakeCache.txt
tests/libs/: CMakeLists.txt
tests/libs/turtle/: CMakeLists.txt
tests/testcases/: CMakeLists.txt
tests/testcases/datasource/: adding.cpp  cache_tests.cpp  datasource_sink_filtering.cpp
tests/testcases/executor/: os_proxy_tests.cpp
