CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(LIBRARIES)

SET(LIBRARIES_BASE_DIR ${PRODUCTION_DIR}/libs)

ADD_SUBDIRECTORY(spdlog)
ADD_SUBDIRECTORY(hyperscan
)
MESSAGE(STATUS "Using spdlog from: " ${SPDLOG_INCLUDE_DIR})
SET(SPDLOG_INCLUDE_DIR ${SPDLOG_INCLUDE_DIR} PARENT_SCOPE)
SET(HYPERSCAN_INCLUDE_DIR ${HYPERSCAN_INCLUDE_DIR} PARENT_SCOPE)

SET(SEMI_INTERNAL_LIBRARIES hyperscan PARENT_SCOPE)
