CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(LIBRARIES)

SET(LIBRARIES_BASE_DIR ${PRODUCTION_DIR}/libs)

ADD_SUBDIRECTORY(spdlog)
MESSAGE(STATUS "Using spdlog from: " ${SPDLOG_INCLUDE_DIR})

ADD_SUBDIRECTORY(re2)
MESSAGE(STATUS "Using re2 from: " ${RE2_INCLUDE_DIR})
#ADD_SUBDIRECTORY(hyperscan)

SET(SPDLOG_INCLUDE_DIR ${SPDLOG_INCLUDE_DIR} PARENT_SCOPE)
#SET(HYPERSCAN_INCLUDE_DIR ${HYPERSCAN_INCLUDE_DIR} PARENT_SCOPE)
SET(RE2_INCLUDE_DIR ${RE2_INCLUDE_DIR} PARENT_SCOPE)


SET(SEMI_INTERNAL_LIBRARIES re2 PARENT_SCOPE)
