CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)
CMAKE_POLICY(VERSION 3.9.0)

PROJECT(LIBRARIES)

SET(LIBRARIES_BASE_DIR ${PRODUCTION_DIR}/libs)

ADD_SUBDIRECTORY(spdlog)
MESSAGE(STATUS "Using spdlog from: " ${SPDLOG_INCLUDE_DIR})

ADD_SUBDIRECTORY(re2)
MESSAGE(STATUS "Using re2 from: " ${RE2_INCLUDE_DIR})
#ADD_SUBDIRECTORY(hyperscan)

ADD_SUBDIRECTORY(nana)
MESSAGE(STATUS "Using nana from: ${NANA_INCLUDE_DIR}")

SET(SPDLOG_INCLUDE_DIR ${SPDLOG_INCLUDE_DIR} PARENT_SCOPE)
#SET(HYPERSCAN_INCLUDE_DIR ${HYPERSCAN_INCLUDE_DIR} PARENT_SCOPE)
SET(RE2_INCLUDE_DIR ${RE2_INCLUDE_DIR} PARENT_SCOPE)
SET(NANA_INCLUDE_DIR ${NANA_INCLUDE_DIR} PARENT_SCOPE)

SET(SEMI_INTERNAL_LIBRARIES re2 nana PARENT_SCOPE)
