CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(ProductionCode)

INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_SUBDIRECTORY(executor)
ADD_SUBDIRECTORY(datasource)
ADD_SUBDIRECTORY(gui)

SET(INTERNAL_LIBRARIES executor datasource gui PARENT_SCOPE)