CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(ProductionCode)

INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})


INCLUDE_DIRECTORIES(${SPDLOG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RE2_INCLUDE_DIR})

ADD_SUBDIRECTORY(compressor)
ADD_SUBDIRECTORY(executor)
ADD_SUBDIRECTORY(datasource)
ADD_SUBDIRECTORY(gui)

SET(INTERNAL_LIBRARIES executor datasource gui compressor PARENT_SCOPE)