CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME spdlog)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring hyperscan")

ADD_SUBDIRECTORY(hyperscan)

SET(HYPERSCAN_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/hyperscan/hyperscan/src)
SET(HYPERSCAN_INCLUDE_DIR ${HYPERSCAN_INCLUDE_DIR} PARENT_SCOPE)

INCLUDE_DIRECTORIES(${HYPERSCAN_INCLUDE_DIR})
