CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)
CMAKE_POLICY(VERSION 3.9.0)

SET(PROJECT_NAME lizard)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(LIZARD_SOURCE_DIR ${LIBRARIES_BASE_DIR}/LIZARD/LIZARD/lib)

FILE(GLOB HEADERS ${LIZARD_SOURCE_DIR}/*.h ${LIZARD_SOURCE_DIR}/*/*.h)
FILE(GLOB SOURCES ${LIZARD_SOURCE_DIR}/*.c ${LIZARD_SOURCE_DIR}/*/*.c)

SET(LIZARD_INCLUDE_DIR ${LIZARD_SOURCE_DIR})
SET(LIZARD_INCLUDE_DIR ${LIZARD_INCLUDE_DIR} PARENT_SCOPE)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})