CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)
CMAKE_POLICY(VERSION 3.9.0)

SET(PROJECT_NAME lz4)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(LZ4_SOURCE_DIR ${LIBRARIES_BASE_DIR}/lz4/lz4/lib)

FILE(GLOB HEADERS ${LZ4_SOURCE_DIR}/*.h)
FILE(GLOB SOURCES ${LZ4_SOURCE_DIR}/*.c)

SET(LZ4_INCLUDE_DIR ${LZ4_SOURCE_DIR})
SET(LZ4_INCLUDE_DIR ${LZ4_INCLUDE_DIR} PARENT_SCOPE)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})