CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)
CMAKE_POLICY(VERSION 3.9.0)

SET(PROJECT_NAME nana)
PROJECT(${PROJECT_NAME})

SET(CMAKE_INSTALL_PREFIX ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
SET(MSVC_USE_STATIC_RUNTIME OFF)
ADD_SUBDIRECTORY(nana)

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(NANA_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/nana/nana/include)
SET(NANA_INCLUDE_DIR ${NANA_INCLUDE_DIR} PARENT_SCOPE)
