CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME re2)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(RE2_BUILD_TESTING NO)
ADD_SUBDIRECTORY(re2)

SET(RE2_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/re2/re2)
SET(RE2_INCLUDE_DIR ${RE2_INCLUDE_DIR} PARENT_SCOPE)

INCLUDE_DIRECTORIES(${RE2_INCLUDE_DIR})