CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)
CMAKE_POLICY(VERSION 3.9.0)

SET(PROJECT_NAME re2)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(RE2_BUILD_TESTING NO)
ADD_SUBDIRECTORY(re2)

SET(RE2_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/re2/re2)
SET(RE2_INCLUDE_DIR ${RE2_INCLUDE_DIR} PARENT_SCOPE)