CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)
CMAKE_POLICY(VERSION 3.9.0)

SET(PROJECT_NAME compressor)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${PRODUCTION_DIR}/subsystems/${PROJECT_NAME}/src)

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME}/*.hpp)
FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

INCLUDE_DIRECTORIES(${LIZARD_INCLUDE_DIR})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})
