CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME executor)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${PRODUCTION_DIR}/subsystems/${PROJECT_NAME}/src)

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME}/*.hpp)
FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

INCLUDE_DIRECTORIES(${SPDLOG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RE2_INCLUDE_DIR})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})
